--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "<https://Ilias-Ahmed.github.io/REACT_Todo-App>",
+  "homepage": "https://Ilias-Ahmed.github.io/REACT_Todo-App",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
